--- a/dialerwindow.ui
+++ b/dialerwindow.ui
@@ -6,7 +6,7 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>1002</width>
+    <width>956</width>
     <height>808</height>
    </rect>
   </property>
@@ -347,7 +347,7 @@ font: 75 10pt &quot;MS Shell Dlg 2&quot;;</string>
      <rect>
       <x>540</x>
       <y>110</y>
-      <width>411</width>
+      <width>371</width>
       <height>531</height>
      </rect>
     </property>
@@ -357,12 +357,30 @@ font: 75 10pt &quot;MS Shell Dlg 2&quot;;</string>
     <property name="showGrid">
      <bool>false</bool>
     </property>
+    <property name="gridStyle">
+     <enum>Qt::NoPen</enum>
+    </property>
+    <property name="sortingEnabled">
+     <bool>false</bool>
+    </property>
     <property name="wordWrap">
      <bool>false</bool>
     </property>
     <property name="cornerButtonEnabled">
      <bool>false</bool>
     </property>
+    <attribute name="horizontalHeaderVisible">
+     <bool>false</bool>
+    </attribute>
+    <attribute name="horizontalHeaderHighlightSections">
+     <bool>false</bool>
+    </attribute>
+    <attribute name="verticalHeaderVisible">
+     <bool>false</bool>
+    </attribute>
+    <attribute name="verticalHeaderHighlightSections">
+     <bool>false</bool>
+    </attribute>
    </widget>
    <widget class="QLabel" name="addressBook">
     <property name="geometry">
@@ -703,7 +721,7 @@ background-repeat:none;</string>
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>1002</width>
+     <width>956</width>
      <height>21</height>
     </rect>
    </property>
