--- a/dialerwindow.ui
+++ b/dialerwindow.ui
@@ -20,11 +20,14 @@
    <widget class="QPushButton" name="pushOne">
     <property name="geometry">
      <rect>
-      <x>120</x>
-      <y>260</y>
+      <x>200</x>
+      <y>270</y>
       <width>111</width>
       <height>101</height>
      </rect>
+    </property>
+    <property name="cursor">
+     <cursorShape>PointingHandCursor</cursorShape>
     </property>
     <property name="autoFillBackground">
      <bool>false</bool>
@@ -45,11 +48,14 @@ background-repeat:none;</string>
    <widget class="QPushButton" name="pushTwo">
     <property name="geometry">
      <rect>
-      <x>230</x>
-      <y>260</y>
+      <x>310</x>
+      <y>270</y>
       <width>111</width>
       <height>101</height>
      </rect>
+    </property>
+    <property name="cursor">
+     <cursorShape>PointingHandCursor</cursorShape>
     </property>
     <property name="styleSheet">
      <string notr="true">background-color:transparent;
@@ -67,11 +73,14 @@ background-repeat:none;</string>
    <widget class="QPushButton" name="pushThree">
     <property name="geometry">
      <rect>
-      <x>340</x>
-      <y>260</y>
+      <x>420</x>
+      <y>270</y>
       <width>111</width>
       <height>101</height>
      </rect>
+    </property>
+    <property name="cursor">
+     <cursorShape>PointingHandCursor</cursorShape>
     </property>
     <property name="styleSheet">
      <string notr="true">background-color:transparent;
@@ -89,11 +98,14 @@ background-repeat:none;</string>
    <widget class="QPushButton" name="pushFour">
     <property name="geometry">
      <rect>
-      <x>120</x>
-      <y>360</y>
+      <x>200</x>
+      <y>370</y>
       <width>111</width>
       <height>101</height>
      </rect>
+    </property>
+    <property name="cursor">
+     <cursorShape>PointingHandCursor</cursorShape>
     </property>
     <property name="styleSheet">
      <string notr="true">background-color:transparent;
@@ -111,11 +123,14 @@ background-repeat:none;</string>
    <widget class="QPushButton" name="pushFive">
     <property name="geometry">
      <rect>
-      <x>230</x>
-      <y>360</y>
+      <x>310</x>
+      <y>370</y>
       <width>111</width>
       <height>101</height>
      </rect>
+    </property>
+    <property name="cursor">
+     <cursorShape>PointingHandCursor</cursorShape>
     </property>
     <property name="styleSheet">
      <string notr="true">background-color:transparent;
@@ -133,11 +148,14 @@ background-repeat:none;</string>
    <widget class="QPushButton" name="pushSix">
     <property name="geometry">
      <rect>
-      <x>340</x>
-      <y>360</y>
+      <x>420</x>
+      <y>370</y>
       <width>111</width>
       <height>101</height>
      </rect>
+    </property>
+    <property name="cursor">
+     <cursorShape>PointingHandCursor</cursorShape>
     </property>
     <property name="styleSheet">
      <string notr="true">background-color:transparent;
@@ -155,11 +173,14 @@ background-repeat:none;</string>
    <widget class="QPushButton" name="pushSeven">
     <property name="geometry">
      <rect>
-      <x>120</x>
-      <y>460</y>
+      <x>200</x>
+      <y>470</y>
       <width>111</width>
       <height>101</height>
      </rect>
+    </property>
+    <property name="cursor">
+     <cursorShape>PointingHandCursor</cursorShape>
     </property>
     <property name="styleSheet">
      <string notr="true">background-color:transparent;
@@ -177,11 +198,14 @@ background-repeat:none;</string>
    <widget class="QPushButton" name="pushEight">
     <property name="geometry">
      <rect>
-      <x>230</x>
-      <y>460</y>
+      <x>310</x>
+      <y>470</y>
       <width>111</width>
       <height>101</height>
      </rect>
+    </property>
+    <property name="cursor">
+     <cursorShape>PointingHandCursor</cursorShape>
     </property>
     <property name="styleSheet">
      <string notr="true">background-color:transparent;
@@ -199,11 +223,14 @@ background-repeat:none;</string>
    <widget class="QPushButton" name="pushNine">
     <property name="geometry">
      <rect>
-      <x>340</x>
-      <y>460</y>
+      <x>420</x>
+      <y>470</y>
       <width>111</width>
       <height>101</height>
      </rect>
+    </property>
+    <property name="cursor">
+     <cursorShape>PointingHandCursor</cursorShape>
     </property>
     <property name="styleSheet">
      <string notr="true">background-color:transparent;
@@ -221,11 +248,14 @@ background-repeat:none;</string>
    <widget class="QPushButton" name="pushStar">
     <property name="geometry">
      <rect>
-      <x>120</x>
-      <y>570</y>
+      <x>200</x>
+      <y>580</y>
       <width>111</width>
       <height>101</height>
      </rect>
+    </property>
+    <property name="cursor">
+     <cursorShape>PointingHandCursor</cursorShape>
     </property>
     <property name="styleSheet">
      <string notr="true">background-color:transparent;
@@ -242,11 +272,14 @@ color: rgb(0, 0, 0);</string>
    <widget class="QPushButton" name="pushZero">
     <property name="geometry">
      <rect>
-      <x>230</x>
-      <y>570</y>
+      <x>310</x>
+      <y>580</y>
       <width>111</width>
       <height>101</height>
      </rect>
+    </property>
+    <property name="cursor">
+     <cursorShape>PointingHandCursor</cursorShape>
     </property>
     <property name="styleSheet">
      <string notr="true">background-color:transparent;
@@ -264,11 +297,14 @@ background-repeat:none;</string>
    <widget class="QPushButton" name="pushHash">
     <property name="geometry">
      <rect>
-      <x>340</x>
-      <y>570</y>
+      <x>420</x>
+      <y>580</y>
       <width>111</width>
       <height>101</height>
      </rect>
+    </property>
+    <property name="cursor">
+     <cursorShape>PointingHandCursor</cursorShape>
     </property>
     <property name="styleSheet">
      <string notr="true">background-color:transparent;
@@ -286,11 +322,14 @@ background-repeat:none;</string>
    <widget class="QPushButton" name="pushEnd">
     <property name="geometry">
      <rect>
-      <x>240</x>
+      <x>320</x>
       <y>730</y>
       <width>101</width>
       <height>101</height>
      </rect>
+    </property>
+    <property name="cursor">
+     <cursorShape>PointingHandCursor</cursorShape>
     </property>
     <property name="styleSheet">
      <string notr="true">background-color:transparent;
@@ -307,11 +346,14 @@ background-repeat:none;</string>
    <widget class="QPushButton" name="pushDel">
     <property name="geometry">
      <rect>
-      <x>360</x>
-      <y>730</y>
+      <x>440</x>
+      <y>740</y>
       <width>81</width>
       <height>81</height>
      </rect>
+    </property>
+    <property name="cursor">
+     <cursorShape>PointingHandCursor</cursorShape>
     </property>
     <property name="styleSheet">
      <string notr="true">background-color:transparent;
@@ -327,8 +369,8 @@ background-repeat:none;</string>
    <widget class="QLineEdit" name="lineDisplay">
     <property name="geometry">
      <rect>
-      <x>160</x>
-      <y>210</y>
+      <x>240</x>
+      <y>190</y>
       <width>251</width>
       <height>31</height>
      </rect>
@@ -346,20 +388,31 @@ font: 75 10pt &quot;MS Shell Dlg 2&quot;;</string>
    <widget class="QTableView" name="tableSafe">
     <property name="geometry">
      <rect>
-      <x>630</x>
-      <y>210</y>
+      <x>710</x>
+      <y>220</y>
       <width>371</width>
       <height>571</height>
      </rect>
     </property>
     <property name="styleSheet">
-     <string notr="true">color: rgb(0, 0, 0);</string>
+     <string notr="true">color: rgb(0, 0, 0);
+selection-background-color: none;
+alternate-background-color: none;
+gridline-color: rgb(181, 181, 181);
+border-color: none;
+background-color:transparent;</string>
+    </property>
+    <property name="verticalScrollBarPolicy">
+     <enum>Qt::ScrollBarAlwaysOff</enum>
+    </property>
+    <property name="horizontalScrollBarPolicy">
+     <enum>Qt::ScrollBarAlwaysOff</enum>
     </property>
     <property name="showGrid">
-     <bool>false</bool>
+     <bool>true</bool>
     </property>
     <property name="gridStyle">
-     <enum>Qt::NoPen</enum>
+     <enum>Qt::DashLine</enum>
     </property>
     <property name="sortingEnabled">
      <bool>false</bool>
@@ -386,8 +439,8 @@ font: 75 10pt &quot;MS Shell Dlg 2&quot;;</string>
    <widget class="QLabel" name="addressBook">
     <property name="geometry">
      <rect>
-      <x>630</x>
-      <y>160</y>
+      <x>710</x>
+      <y>170</y>
       <width>161</width>
       <height>20</height>
      </rect>
@@ -403,8 +456,8 @@ font: 63 12pt &quot;Lucida Fax&quot;;</string>
    <widget class="QLabel" name="label_2">
     <property name="geometry">
      <rect>
-      <x>360</x>
-      <y>420</y>
+      <x>440</x>
+      <y>430</y>
       <width>69</width>
       <height>20</height>
      </rect>
@@ -427,8 +480,8 @@ background-color:none;</string>
    <widget class="QLabel" name="label_3">
     <property name="geometry">
      <rect>
-      <x>250</x>
-      <y>420</y>
+      <x>330</x>
+      <y>430</y>
       <width>69</width>
       <height>20</height>
      </rect>
@@ -451,8 +504,8 @@ background-color:none;</string>
    <widget class="QLabel" name="label_4">
     <property name="geometry">
      <rect>
-      <x>140</x>
-      <y>420</y>
+      <x>220</x>
+      <y>430</y>
       <width>69</width>
       <height>20</height>
      </rect>
@@ -475,8 +528,8 @@ background-color:none;</string>
    <widget class="QLabel" name="label_5">
     <property name="geometry">
      <rect>
-      <x>250</x>
-      <y>320</y>
+      <x>330</x>
+      <y>330</y>
       <width>69</width>
       <height>20</height>
      </rect>
@@ -499,8 +552,8 @@ background-color:none;</string>
    <widget class="QLabel" name="label_6">
     <property name="geometry">
      <rect>
-      <x>360</x>
-      <y>320</y>
+      <x>440</x>
+      <y>330</y>
       <width>69</width>
       <height>20</height>
      </rect>
@@ -523,8 +576,8 @@ background-color:none;</string>
    <widget class="QLabel" name="label_7">
     <property name="geometry">
      <rect>
-      <x>140</x>
-      <y>320</y>
+      <x>220</x>
+      <y>330</y>
       <width>69</width>
       <height>20</height>
      </rect>
@@ -547,8 +600,8 @@ background-color:none;</string>
    <widget class="QLabel" name="label_8">
     <property name="geometry">
      <rect>
-      <x>140</x>
-      <y>520</y>
+      <x>220</x>
+      <y>530</y>
       <width>69</width>
       <height>20</height>
      </rect>
@@ -571,8 +624,8 @@ background-color:none;</string>
    <widget class="QLabel" name="label_9">
     <property name="geometry">
      <rect>
-      <x>250</x>
-      <y>520</y>
+      <x>330</x>
+      <y>530</y>
       <width>69</width>
       <height>20</height>
      </rect>
@@ -595,8 +648,8 @@ background-color:none;</string>
    <widget class="QLabel" name="label_10">
     <property name="geometry">
      <rect>
-      <x>360</x>
-      <y>520</y>
+      <x>440</x>
+      <y>530</y>
       <width>69</width>
       <height>20</height>
      </rect>
@@ -619,8 +672,8 @@ background-color:none;</string>
    <widget class="QLabel" name="label_11">
     <property name="geometry">
      <rect>
-      <x>250</x>
-      <y>630</y>
+      <x>330</x>
+      <y>640</y>
       <width>69</width>
       <height>20</height>
      </rect>
@@ -643,8 +696,8 @@ background-color:none;</string>
    <widget class="QLabel" name="label">
     <property name="geometry">
      <rect>
-      <x>110</x>
-      <y>830</y>
+      <x>190</x>
+      <y>840</y>
       <width>91</width>
       <height>61</height>
      </rect>
@@ -662,8 +715,8 @@ background-repeat:none;</string>
    <widget class="QLabel" name="label_12">
     <property name="geometry">
      <rect>
-      <x>310</x>
-      <y>830</y>
+      <x>390</x>
+      <y>840</y>
       <width>61</width>
       <height>51</height>
      </rect>
@@ -681,8 +734,8 @@ background-repeat:none;</string>
    <widget class="QLabel" name="label_13">
     <property name="geometry">
      <rect>
-      <x>220</x>
-      <y>840</y>
+      <x>300</x>
+      <y>850</y>
       <width>61</width>
       <height>41</height>
      </rect>
@@ -700,8 +753,8 @@ background-repeat:none;</string>
    <widget class="QLabel" name="label_14">
     <property name="geometry">
      <rect>
-      <x>390</x>
-      <y>840</y>
+      <x>470</x>
+      <y>850</y>
       <width>61</width>
       <height>41</height>
      </rect>
@@ -719,8 +772,8 @@ background-repeat:none;</string>
    <widget class="QLabel" name="label_15">
     <property name="geometry">
      <rect>
-      <x>840</x>
-      <y>820</y>
+      <x>920</x>
+      <y>830</y>
       <width>61</width>
       <height>51</height>
      </rect>
@@ -738,8 +791,8 @@ background-repeat:none;</string>
    <widget class="QLabel" name="label_16">
     <property name="geometry">
      <rect>
-      <x>920</x>
-      <y>830</y>
+      <x>1000</x>
+      <y>840</y>
       <width>61</width>
       <height>41</height>
      </rect>
@@ -757,8 +810,8 @@ background-repeat:none;</string>
    <widget class="QLabel" name="label_17">
     <property name="geometry">
      <rect>
-      <x>640</x>
-      <y>820</y>
+      <x>720</x>
+      <y>830</y>
       <width>91</width>
       <height>61</height>
      </rect>
@@ -776,8 +829,8 @@ background-repeat:none;</string>
    <widget class="QLabel" name="label_18">
     <property name="geometry">
      <rect>
-      <x>730</x>
-      <y>810</y>
+      <x>810</x>
+      <y>820</y>
       <width>101</width>
       <height>81</height>
      </rect>
@@ -795,8 +848,8 @@ background-repeat:none;</string>
    <widget class="QLabel" name="label_19">
     <property name="geometry">
      <rect>
-      <x>990</x>
-      <y>60</y>
+      <x>1020</x>
+      <y>160</y>
       <width>81</width>
       <height>31</height>
      </rect>
@@ -814,8 +867,8 @@ background-repeat:none;</string>
    <widget class="QLabel" name="label_20">
     <property name="geometry">
      <rect>
-      <x>-110</x>
-      <y>20</y>
+      <x>-30</x>
+      <y>30</y>
       <width>791</width>
       <height>941</height>
      </rect>
@@ -833,8 +886,8 @@ background-repeat:none;</string>
    <widget class="QLabel" name="label_21">
     <property name="geometry">
      <rect>
-      <x>420</x>
-      <y>20</y>
+      <x>500</x>
+      <y>30</y>
       <width>791</width>
       <height>941</height>
      </rect>
