--- a/dialerwindow.ui
+++ b/dialerwindow.ui
@@ -20,7 +20,7 @@
    <widget class="QPushButton" name="pushOne">
     <property name="geometry">
      <rect>
-      <x>200</x>
+      <x>180</x>
       <y>270</y>
       <width>111</width>
       <height>101</height>
@@ -48,7 +48,7 @@ background-repeat:none;</string>
    <widget class="QPushButton" name="pushTwo">
     <property name="geometry">
      <rect>
-      <x>310</x>
+      <x>290</x>
       <y>270</y>
       <width>111</width>
       <height>101</height>
@@ -73,7 +73,7 @@ background-repeat:none;</string>
    <widget class="QPushButton" name="pushThree">
     <property name="geometry">
      <rect>
-      <x>420</x>
+      <x>400</x>
       <y>270</y>
       <width>111</width>
       <height>101</height>
@@ -98,7 +98,7 @@ background-repeat:none;</string>
    <widget class="QPushButton" name="pushFour">
     <property name="geometry">
      <rect>
-      <x>200</x>
+      <x>180</x>
       <y>370</y>
       <width>111</width>
       <height>101</height>
@@ -123,7 +123,7 @@ background-repeat:none;</string>
    <widget class="QPushButton" name="pushFive">
     <property name="geometry">
      <rect>
-      <x>310</x>
+      <x>290</x>
       <y>370</y>
       <width>111</width>
       <height>101</height>
@@ -148,7 +148,7 @@ background-repeat:none;</string>
    <widget class="QPushButton" name="pushSix">
     <property name="geometry">
      <rect>
-      <x>420</x>
+      <x>400</x>
       <y>370</y>
       <width>111</width>
       <height>101</height>
@@ -173,7 +173,7 @@ background-repeat:none;</string>
    <widget class="QPushButton" name="pushSeven">
     <property name="geometry">
      <rect>
-      <x>200</x>
+      <x>180</x>
       <y>470</y>
       <width>111</width>
       <height>101</height>
@@ -198,7 +198,7 @@ background-repeat:none;</string>
    <widget class="QPushButton" name="pushEight">
     <property name="geometry">
      <rect>
-      <x>310</x>
+      <x>290</x>
       <y>470</y>
       <width>111</width>
       <height>101</height>
@@ -223,7 +223,7 @@ background-repeat:none;</string>
    <widget class="QPushButton" name="pushNine">
     <property name="geometry">
      <rect>
-      <x>420</x>
+      <x>400</x>
       <y>470</y>
       <width>111</width>
       <height>101</height>
@@ -248,7 +248,7 @@ background-repeat:none;</string>
    <widget class="QPushButton" name="pushStar">
     <property name="geometry">
      <rect>
-      <x>200</x>
+      <x>180</x>
       <y>580</y>
       <width>111</width>
       <height>101</height>
@@ -272,7 +272,7 @@ color: rgb(0, 0, 0);</string>
    <widget class="QPushButton" name="pushZero">
     <property name="geometry">
      <rect>
-      <x>310</x>
+      <x>290</x>
       <y>580</y>
       <width>111</width>
       <height>101</height>
@@ -297,7 +297,7 @@ background-repeat:none;</string>
    <widget class="QPushButton" name="pushHash">
     <property name="geometry">
      <rect>
-      <x>420</x>
+      <x>400</x>
       <y>580</y>
       <width>111</width>
       <height>101</height>
@@ -322,7 +322,7 @@ background-repeat:none;</string>
    <widget class="QPushButton" name="pushEnd">
     <property name="geometry">
      <rect>
-      <x>320</x>
+      <x>300</x>
       <y>730</y>
       <width>101</width>
       <height>101</height>
@@ -346,7 +346,7 @@ background-repeat:none;</string>
    <widget class="QPushButton" name="pushDel">
     <property name="geometry">
      <rect>
-      <x>440</x>
+      <x>420</x>
       <y>740</y>
       <width>81</width>
       <height>81</height>
@@ -369,7 +369,7 @@ background-repeat:none;</string>
    <widget class="QLineEdit" name="lineDisplay">
     <property name="geometry">
      <rect>
-      <x>240</x>
+      <x>220</x>
       <y>190</y>
       <width>251</width>
       <height>31</height>
@@ -379,7 +379,7 @@ background-repeat:none;</string>
      <string notr="true">border-color:none;
 color: rgb(0, 0, 0);
 border: transparent;
-font: 75 10pt &quot;MS Shell Dlg 2&quot;;</string>
+font: 75 15pt &quot;MS Shell Dlg 2&quot;;</string>
     </property>
     <property name="alignment">
      <set>Qt::AlignCenter</set>
@@ -390,7 +390,7 @@ font: 75 10pt &quot;MS Shell Dlg 2&quot;;</string>
      <rect>
       <x>710</x>
       <y>220</y>
-      <width>371</width>
+      <width>331</width>
       <height>571</height>
      </rect>
     </property>
@@ -409,10 +409,10 @@ background-color:transparent;</string>
      <enum>Qt::ScrollBarAlwaysOff</enum>
     </property>
     <property name="showGrid">
-     <bool>true</bool>
+     <bool>false</bool>
     </property>
     <property name="gridStyle">
-     <enum>Qt::DashLine</enum>
+     <enum>Qt::NoPen</enum>
     </property>
     <property name="sortingEnabled">
      <bool>false</bool>
@@ -441,7 +441,7 @@ background-color:transparent;</string>
      <rect>
       <x>710</x>
       <y>170</y>
-      <width>161</width>
+      <width>191</width>
       <height>20</height>
      </rect>
     </property>
@@ -456,7 +456,7 @@ font: 63 12pt &quot;Lucida Fax&quot;;</string>
    <widget class="QLabel" name="label_2">
     <property name="geometry">
      <rect>
-      <x>440</x>
+      <x>420</x>
       <y>430</y>
       <width>69</width>
       <height>20</height>
@@ -480,7 +480,7 @@ background-color:none;</string>
    <widget class="QLabel" name="label_3">
     <property name="geometry">
      <rect>
-      <x>330</x>
+      <x>310</x>
       <y>430</y>
       <width>69</width>
       <height>20</height>
@@ -504,7 +504,7 @@ background-color:none;</string>
    <widget class="QLabel" name="label_4">
     <property name="geometry">
      <rect>
-      <x>220</x>
+      <x>200</x>
       <y>430</y>
       <width>69</width>
       <height>20</height>
@@ -528,7 +528,7 @@ background-color:none;</string>
    <widget class="QLabel" name="label_5">
     <property name="geometry">
      <rect>
-      <x>330</x>
+      <x>310</x>
       <y>330</y>
       <width>69</width>
       <height>20</height>
@@ -552,7 +552,7 @@ background-color:none;</string>
    <widget class="QLabel" name="label_6">
     <property name="geometry">
      <rect>
-      <x>440</x>
+      <x>420</x>
       <y>330</y>
       <width>69</width>
       <height>20</height>
@@ -576,7 +576,7 @@ background-color:none;</string>
    <widget class="QLabel" name="label_7">
     <property name="geometry">
      <rect>
-      <x>220</x>
+      <x>200</x>
       <y>330</y>
       <width>69</width>
       <height>20</height>
@@ -600,7 +600,7 @@ background-color:none;</string>
    <widget class="QLabel" name="label_8">
     <property name="geometry">
      <rect>
-      <x>220</x>
+      <x>200</x>
       <y>530</y>
       <width>69</width>
       <height>20</height>
@@ -624,7 +624,7 @@ background-color:none;</string>
    <widget class="QLabel" name="label_9">
     <property name="geometry">
      <rect>
-      <x>330</x>
+      <x>310</x>
       <y>530</y>
       <width>69</width>
       <height>20</height>
@@ -648,7 +648,7 @@ background-color:none;</string>
    <widget class="QLabel" name="label_10">
     <property name="geometry">
      <rect>
-      <x>440</x>
+      <x>420</x>
       <y>530</y>
       <width>69</width>
       <height>20</height>
@@ -672,7 +672,7 @@ background-color:none;</string>
    <widget class="QLabel" name="label_11">
     <property name="geometry">
      <rect>
-      <x>330</x>
+      <x>310</x>
       <y>640</y>
       <width>69</width>
       <height>20</height>
@@ -696,7 +696,7 @@ background-color:none;</string>
    <widget class="QLabel" name="label">
     <property name="geometry">
      <rect>
-      <x>190</x>
+      <x>170</x>
       <y>840</y>
       <width>91</width>
       <height>61</height>
@@ -715,7 +715,7 @@ background-repeat:none;</string>
    <widget class="QLabel" name="label_12">
     <property name="geometry">
      <rect>
-      <x>390</x>
+      <x>370</x>
       <y>840</y>
       <width>61</width>
       <height>51</height>
@@ -734,7 +734,7 @@ background-repeat:none;</string>
    <widget class="QLabel" name="label_13">
     <property name="geometry">
      <rect>
-      <x>300</x>
+      <x>280</x>
       <y>850</y>
       <width>61</width>
       <height>41</height>
@@ -753,7 +753,7 @@ background-repeat:none;</string>
    <widget class="QLabel" name="label_14">
     <property name="geometry">
      <rect>
-      <x>470</x>
+      <x>450</x>
       <y>850</y>
       <width>61</width>
       <height>41</height>
@@ -772,7 +772,7 @@ background-repeat:none;</string>
    <widget class="QLabel" name="label_15">
     <property name="geometry">
      <rect>
-      <x>920</x>
+      <x>900</x>
       <y>830</y>
       <width>61</width>
       <height>51</height>
@@ -791,7 +791,7 @@ background-repeat:none;</string>
    <widget class="QLabel" name="label_16">
     <property name="geometry">
      <rect>
-      <x>1000</x>
+      <x>980</x>
       <y>840</y>
       <width>61</width>
       <height>41</height>
@@ -810,7 +810,7 @@ background-repeat:none;</string>
    <widget class="QLabel" name="label_17">
     <property name="geometry">
      <rect>
-      <x>720</x>
+      <x>700</x>
       <y>830</y>
       <width>91</width>
       <height>61</height>
@@ -829,7 +829,7 @@ background-repeat:none;</string>
    <widget class="QLabel" name="label_18">
     <property name="geometry">
      <rect>
-      <x>810</x>
+      <x>790</x>
       <y>820</y>
       <width>101</width>
       <height>81</height>
@@ -848,7 +848,7 @@ background-repeat:none;</string>
    <widget class="QLabel" name="label_19">
     <property name="geometry">
      <rect>
-      <x>1020</x>
+      <x>1000</x>
       <y>160</y>
       <width>81</width>
       <height>31</height>
@@ -867,7 +867,7 @@ background-repeat:none;</string>
    <widget class="QLabel" name="label_20">
     <property name="geometry">
      <rect>
-      <x>-30</x>
+      <x>-50</x>
       <y>30</y>
       <width>791</width>
       <height>941</height>
@@ -886,7 +886,7 @@ background-repeat:none;</string>
    <widget class="QLabel" name="label_21">
     <property name="geometry">
      <rect>
-      <x>500</x>
+      <x>480</x>
       <y>30</y>
       <width>791</width>
       <height>941</height>
